# unit_randomizer

./: .gitignore  Cargo.toml  README.md  config.toml  unicorn_overlord_characters.csv  unicorn_overlord_characters_full_list.csv
.github/workflows/: rust_workflow.yml
csv/: pokemon.csv
src/: main.rs
