[package]
name = "unit_randomizer"
version = "1.1.0"
edition = "2021"
authors = ["Matthew Byram"]
description = "Small randomizer for creating unit teams, specifically for Unicorn Overlord to create varying teams"

[dependencies]
csv = "1.3.0"
rand = "0.8.5"
config = "0.14.1"
serde = { version ="1.0.214", features =["derive"] }
serde_derive = "1.0.214"
